fix contact form alignment

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -18,6 +18,7 @@
 }
 
 .Contact-body {
+  width: 86vw;
   padding-top: 10vh;
 }
 
